--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "my-github-activity",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/Shinyaigeek/my-github-activity.git",
-  "author": "shinyaigeek <philispaxil@gmail.com>",
-  "license": "MIT"
+  "private": true,
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.0"
+  }
 }
