--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@tsconfig/svelte": "^2.0.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-check": "^2.2.4",
+    "svelte-preprocess": "^4.8.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@octokit/rest": "^18.9.1",
