--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
+    "build:style": "tailwindcss build assets/style.css -o public/build/style.css",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
@@ -11,6 +12,8 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@tsconfig/svelte": "^2.0.1",
+    "autoprefixer": "^10.3.2",
+    "postcss": "^8.3.6",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -24,6 +27,7 @@
   "dependencies": {
     "@octokit/rest": "^18.9.1",
     "@vercel/node": "^1.12.1",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "tailwindcss": "^2.2.7"
   }
 }
