Chore: add dev mode for style

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && yarn build:style",
     "build:style": "tailwindcss build assets/style.css -o public/build/style.css",
+    "dev:style": "yarn build:style --watch",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
